Fix: messages were overlapped by prompt

--- a/htdocs/styles/src/components/base/app.scss
+++ b/htdocs/styles/src/components/base/app.scss
@@ -5,6 +5,7 @@ div.evq-messages {
 	width: 100%;
 	padding: 0.4rem;
 	width: 20%;
+	z-index: 1500;
 	
 	div {
 		border: 1px solid;
